[FIX] fix some bugs

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,74 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "#from dro.src.OR_Wasserstein_DRO import *\n",
+    "from dro.src.mmd_dro import *\n",
+    "from dro.src.Wasserstein_DRO import *\n",
+    "\n",
+    "X = np.array([[1, 1], [2, 1], [3, 1], [4,1]])\n",
+    "y = np.array([1, 1, 0, 0])\n",
+    "model = Wasserstein_DRO(input_dim = 2, model_type = 'svm')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'theta': [-2.000000767319393, 5.00000185975891]}\n",
-      "{'theta': [-2.000000843765957, 5.000002006656201]}\n",
-      "{'theta': [-2.0000000369480064, 5.000000090054232]}\n",
-      "{'theta': [-2.000000051549866, 5.000000136656427]}\n",
-      "{'theta': [-48.41958114239484, 126.17786542754993]}\n"
+      "{'theta': [-2.00000000000027, 4.999999999997177]}\n",
+      "{'theta': [-0.9999999999999165, 1.9999999999999853]}\n",
+      "{'theta': [-0.999999999999908, 1.9999999999998437]}\n",
+      "{'theta': [-0.9999999999990905, 1.9999999999975429]}\n",
+      "{'theta': [-0.6022672374032751, 1.022985584920784]}\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "from types import MethodType\n",
     "\n",
-    "from dro.src.OR_Wasserstein_DRO import *\n",
-    "from dro.src.mmd_dro import *\n",
+    "def _loss(self, X, y):\n",
+    "    return 5 * np.maximum(y - X @ self.theta, 0) + np.maximum(X @ self.theta - y, 0)\n",
     "\n",
-    "X = np.array([[1, 1], [2, 1], [3, 1], [4,1]])\n",
-    "y = np.array([1, 1, 0, 0])\n",
-    "model = MMD_DRO(input_dim = 2, model_type = 'svm')\n",
+    "def _cvx_loss(self, X, y, theta):\n",
+    "    return 5 * cp.pos(y - X @ theta) + 1 * cp.pos(X @ theta - y)\n",
+    "\n",
+    "model._loss = MethodType(_loss, model)\n",
+    "model._cvx_loss = MethodType(_cvx_loss, model)\n",
     "for k in range(5):\n",
-    "    \n",
-    "    model.update({'eta': 0.05 * (k + 1), 'n_certifiy_ratio': 1})\n",
-    "    print(model.fit(X, y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.sigma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1., 1.])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.hstack([X, y.reshape(-1, 1)])[0]"
+    "    model.update({'eps': 0.05 * (k + 1), 'n_certifiy_ratio': 1})\n",
+    "    print(model.fit(X, y))\n",
+    "    "
    ]
   }
  ],
