--- a/doc/personalize_loss_tutorial.ipynb
+++ b/doc/personalize_loss_tutorial.ipynb
@@ -4,40 +4,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Define Personalized Loss\n",
     "In the following, we present a case to show how to incorporate the personalized loss and plug it into different DRO losses."
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## f-divergence DRO\n",
+    "Across f-divergence DRO, the adaptive loss can be easily modified as follows. Below, we modify the standard loss into the quantile regression:\n",
+    "$\\ell((\\theta, b);(X, Y)) = 3(Y - \\theta^{\\top}X - b)^+ + (\\theta^{\\top}X + b - Y)^+$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'theta': [-0.48891007299787476, 1.9556403007778032]}\n",
-      "{'theta': [-0.47103180655319055, 1.8841272540151666]}\n",
-      "{'theta': [-0.4651670885530432, 1.8606683558961619]}\n",
-      "{'theta': [-0.4620192279713162, 1.8480769103478247]}\n",
-      "{'theta': [-0.4599744797040242, 1.839897918619857]}\n"
+      "{'theta': [-0.48891007299787476, 0.0], 'b': array(1.9556403)}\n",
+      "{'theta': [-0.47103180655319055, 0.0], 'b': array(1.88412725)}\n",
+      "{'theta': [-0.4651670885530432, 0.0], 'b': array(1.86066836)}\n",
+      "{'theta': [-0.4620192279713162, 0.0], 'b': array(1.84807691)}\n",
+      "{'theta': [-0.4599744797040242, 0.0], 'b': array(1.83989792)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wty6162/Desktop/DRO_solver/dro/dro/src/linear_model/base.py:49: UserWarning: Unsupported model_type: quantile. Default supported types are svm, logistic, ols, lad. Please define your personalized loss.\n",
+      "  warnings.warn(f\"Unsupported model_type: {model_type}. Default supported types are svm, logistic, ols, lad. Please define your personalized loss.\", UserWarning)\n"
      ]
     }
    ],
    "source": [
     "import os\n",
+    "import cvxpy as cp\n",
     "# Set the new path\n",
     "new_path = \"/Users/wty6162/Desktop/DRO_solver/dro\"\n",
-    "\n",
     "# Change the current working directory\n",
     "os.chdir(new_path)\n",
     "\n",
     "import numpy as np\n",
-    "\n",
-    "#from dro.src.OR_Wasserstein_DRO import *\n",
-    "from dro.src.Wasserstein_DRO import *\n",
-    "from dro.src.chi2_dro import *\n",
-    "\n",
+    "from dro.src.linear_model.chi2_dro import *\n",
     "X = np.array([[1, 1], [2, 1], [3, 1], [4,1]])\n",
     "y = np.array([1, 1, 0, 0])\n",
     "model = Chi2DRO(input_dim = 2, model_type = 'quantile')\n",
@@ -46,15 +60,15 @@
     "from types import MethodType\n",
     "\n",
     "def _loss(self, X, y):\n",
-    "    return 3 * np.maximum(y - X @ self.theta, 0) + np.maximum(X @ self.theta - y, 0)\n",
+    "    return 3 * np.maximum(y - X @ self.theta - self.b, 0) + np.maximum(X @ self.theta + self.b - y, 0)\n",
     "\n",
-    "def _cvx_loss(self, X, y, theta):\n",
-    "    return 3 * cp.pos(y - X @ theta) + 1 * cp.pos(X @ theta - y)\n",
+    "def _cvx_loss(self, X, y, theta, b):\n",
+    "    return 3 * cp.pos(y - X @ theta - b) + 1 * cp.pos(X @ theta + b - y)\n",
     "\n",
     "model._loss = MethodType(_loss, model)\n",
     "model._cvx_loss = MethodType(_cvx_loss, model)\n",
     "for k in range(5):\n",
-    "    model.update({'eps': 0.05 * (k + 1), 'n_certifiy_ratio': 1})\n",
+    "    model.update({'eps': 0.05 * (k + 1)})\n",
     "    print(model.fit(X, y))"
    ]
   },
@@ -62,27 +76,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, for more complicated losses, such as hr-dro and wasserstein-dro, where the loss difference changes with the inner function fit, it has not been implemented yet."
+    "## Wasserstein DRO"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.22442099, 0.33542839, 0.69314718, 0.69314718])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "np.log(1 + np.exp(-np.multiply(y, X @ model.theta)))"
+    "\n",
+    "For more complicated losses, such as hr-dro and wasserstein-dro, where the loss difference changes with the inner function fit, it has not been implemented yet."
    ]
   },
   {
