--- a/doc/f_dro_tutorial.ipynb
+++ b/doc/f_dro_tutorial.ipynb
@@ -167,6 +167,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## TODO: data driven evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "These f-divergence DROs are suitable for handling general distribution shifts with likelihood misspecification, while can be too worst-case in practice."
    ]
   },
