[Update] HR-DRO

--- a/doc/WassersteinDRO_tutorial.ipynb
+++ b/doc/WassersteinDRO_tutorial.ipynb
@@ -8,9 +8,12 @@
    "source": [
     "import numpy as np\n",
     "import os\n",
-    "os.chdir('/Users/wty6162/Desktop/DRO_solver')\n",
-    "from dro.src.linear_model.Wasserstein_DRO import *\n",
-    "\n"
+    "# Set the new path\n",
+    "new_path = \"/Users/wty6162/Desktop/DRO_solver/dro\"\n",
+    "# Change the current working directory\n",
+    "os.chdir(new_path)\n",
+    "from dro.src.linear_model.chi2_dro import *\n",
+    "from dro.src.linear_model.Wasserstein_DRO import *\n"
    ]
   },
   {
@@ -29,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,20 +208,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regression Task\n",
+    "We can construct similar models for Wasserstein DRO regression models, including ``lad`` and ``ols`` loss."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9999999999999999\n"
+      "{'theta': [59.81938392903211, 35.526134883887444, 35.526134789196675, 35.52613480961384, 35.52613456536107], 'b': array(8.39921829)}\n"
      ]
     }
    ],
    "source": [
-    "print(np.sum(worst_case_log['weight']))"
+    "import numpy as np\n",
+    "import os\n",
+    "# Set the new path\n",
+    "new_path = \"/Users/wty6162/Desktop/DRO_solver/dro\"\n",
+    "# Change the current working directory\n",
+    "os.chdir(new_path)\n",
+    "\n",
+    "from dro.src.linear_model.Wasserstein_DRO import *\n",
+    "from dro.src.data.dataloader_regression import regression_basic\n",
+    "\n",
+    "feature_dim = 5\n",
+    "X, y = regression_basic(num_samples = 100, d = feature_dim, noise = 1)\n",
+    "\n",
+    "reg_model = WassersteinDRO(input_dim = feature_dim, model_type = 'ols')\n",
+    "\n",
+    "costM = np.identity(feature_dim)\n",
+    "costM[0][0] = 3\n",
+    "reg_model.update({'cost_matrix': costM, 'eps': 2})\n",
+    "print(reg_model.fit(X, y))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 0.97511973, -0.67716171, -0.01224677, -0.89725437,  0.07580456],\n",
+       "        [ 0.08187414, -0.48536355,  0.75896922, -0.77282521, -0.23681861],\n",
+       "        [-1.4123037 , -0.90802408, -0.56228753, -1.01283112,  0.31424733],\n",
+       "        [-0.64511975,  0.36163603,  1.35624003, -0.07201012,  1.0035329 ],\n",
+       "        [-0.62269952,  0.28099187, -1.9520878 , -0.1517851 ,  0.58831721]]),\n",
+       " array([ -58.61798691,  -47.47584309, -258.69683389,  116.09697064,\n",
+       "        -123.44301171]))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[0:5], y[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wty6162/Desktop/DRO_solver/dro/dro/src/linear_model/Wasserstein_DRO.py:260: UserWarning: OLS does not support the corresponding computation method.\n",
+      "  warnings.warn(\"OLS does not support the corresponding computation method.\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "reg_model.worst_distribution(X, y, 1)"
    ]
   }
  ],
