--- a/doc/personalize_loss_tutorial.ipynb
+++ b/doc/personalize_loss_tutorial.ipynb
@@ -51,6 +51,7 @@
     "os.chdir(new_path)\n",
     "\n",
     "import numpy as np\n",
+    "from dro.src.linear_model.Wasserstein_DRO import *\n",
     "from dro.src.linear_model.chi2_dro import *\n",
     "X = np.array([[1, 1], [2, 1], [3, 1], [4,1]])\n",
     "y = np.array([1, 1, 0, 0])\n",
