--- a/doc/WassersteinDRO_tutorial.ipynb
+++ b/doc/WassersteinDRO_tutorial.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "source": [
     "## Worst-case Distribution and Visualization\n",
-    "For SVM / Logistic / LAD, we provide two different worst-case distribution computations, 1 stands for XXX, 2 stands for the exact calculation while requiring solving n optimization problems."
+    "For SVM / Logistic / LAD, we provide two different worst-case distribution computations, 1 stands for asymptotic approximation, 2 stands for the exact calculation while requiring solving n optimization problems."
    ]
   },
   {
