--- a/docs/examples/f_dro_tutorial.ipynb
+++ b/docs/examples/f_dro_tutorial.ipynb
@@ -167,7 +167,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO: data driven evaluation"
+    "## data driven evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7058659787811907\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "24.76397451879509"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "from sklearn.datasets import make_regression, make_classification\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression, Ridge\n",
+    "# Data generation\n",
+    "\n",
+    "sample_num = 200\n",
+    "X, y = make_regression(n_samples = sample_num, n_features=10, noise = 5, random_state=42)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Set the new path\n",
+    "new_path = \"/Users/wty6162/Desktop/DRO_solver/dro\"\n",
+    "# Change the current working directory\n",
+    "os.chdir(new_path)\n",
+    "eps = 2 / sample_num\n",
+    "\n",
+    "from dro.src.linear_model.chi2_dro import *\n",
+    "\n",
+    "dro_model = Chi2DRO(input_dim = 10, model_type = 'ols', fit_intercept=False)\n",
+    "dro_model.update({'eps': 0.5})\n",
+    "dro_model.fit(X, y)\n",
+    "dro_model.evaluate(X, y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.505360679980362e-22"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "errors = (dro_model.predict(X) - y) ** 2\n",
+    "np.mean(errors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [6, 8]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[1], [2]])\n",
+    "b = np.array([[1,2,3],[3,4,3]])\n",
+    "np.multiply(a, b)"
    ]
   },
   {
