--- a/docs/api/notebooks/f_dro_tutorial.ipynb
+++ b/docs/api/notebooks/f_dro_tutorial.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standard f-divergence DRO\n",
+    "## Standard f-divergence DRO\n",
     "We include chi2, cvar, kl, tv distance, which corresponds to the standard definition of (generalized) f-divergence.\n",
     "\n",
     "The following steps including model fitting, and worst-case illustrations."
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## data driven evaluation"
+    "### data driven evaluation"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Partial Distribution Shift\n",
+    "## Partial Distribution Shift\n",
     "Some special kinds of DRO models can help handle problems of particular worst-case distribution shift, i.e., covariate shift (marginal_dro). Both of them are built from CVaR-DRO."
    ]
   },
@@ -277,23 +277,6 @@
     "print('marginal', clf_model_margin.fit(X, y)['theta'])\n",
     "print('conditional', clf_model_cond.fit(X, y))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bayesian perspective\n",
-    "In some special examples where we have some priors or parametric information for the distribution shift, we can apply the following Bayesian DRO or Parametric DRO. These are usually built or designed with a under the f-dro framework.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dro.src.linear_model.bayesian_dro import *"
-   ]
   }
  ],
  "metadata": {
@@ -312,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
