--- a/docs/api/notebooks/param_dro.ipynb
+++ b/docs/api/notebooks/param_dro.ipynb
@@ -11,13 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In some special examples where we have some priors or parametric information for the distribution shift, we can apply the following Bayesian DRO or Parametric DRO. These are usually built or designed with a under the f-dro framework.\n",
+    "\n",
     "We discuss the DRO models based on misspecified parametric distribution assumptions.\n",
     "\n",
     "They are often imposed in newsvendor or portfolio loss or regression with gaussian assumptions.\n",
     "\n",
     "\n",
-    "# Frequensit versus Bayesian\n",
-    "## Frequenist\n",
+    "## Frequensit\n",
     "\n",
     "PDRO"
    ]
@@ -180,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
