--- a/docs/api/notebooks/param_dro.ipynb
+++ b/docs/api/notebooks/param_dro.ipynb
@@ -16,7 +16,10 @@
     "They are often imposed in newsvendor or portfolio loss or regression with gaussian assumptions.\n",
     "\n",
     "\n",
-    "## Frequensit\n"
+    "# Frequensit versus Bayesian\n",
+    "## Frequenist\n",
+    "\n",
+    "PDRO"
    ]
   },
   {
