--- a/docs/api/notebooks/f_dro_tutorial.ipynb
+++ b/docs/api/notebooks/f_dro_tutorial.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standard f-divergence DRO\n",
+    "# Standard f-divergence DRO\n",
     "We include chi2, cvar, kl, tv distance, which corresponds to the standard definition of (generalized) f-divergence.\n",
     "\n",
     "The following steps including model fitting, and worst-case illustrations."
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Partial Distribution Shift\n",
+    "# Partial Distribution Shift\n",
     "Some special kinds of DRO models can help handle problems of particular worst-case distribution shift, i.e., covariate shift (marginal_dro). Both of them are built from CVaR-DRO."
    ]
   },
