--- a/docs-code/api/notebooks/f_dro_tutorial.ipynb
+++ b/docs-code/api/notebooks/f_dro_tutorial.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standard f-divergence DRO\n",
+    "## Standard f-divergence DRO\n",
     "We include chi2, cvar, kl, tv distance, which corresponds to the standard definition of (generalized) f-divergence.\n",
     "\n",
     "The following steps including model fitting, and worst-case illustrations."
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Partial Distribution Shift\n",
+    "## Partial Distribution Shift\n",
     "Some special kinds of DRO models can help handle problems of particular worst-case distribution shift, i.e., covariate shift (marginal_dro). Both of them are built from CVaR-DRO."
    ]
   },
@@ -312,9 +312,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
