--- a/docs-code/api/notebooks/param_dro.ipynb
+++ b/docs-code/api/notebooks/param_dro.ipynb
@@ -16,10 +16,7 @@
     "They are often imposed in newsvendor or portfolio loss or regression with gaussian assumptions.\n",
     "\n",
     "\n",
-    "# Frequensit versus Bayesian\n",
-    "## Frequenist\n",
-    "\n",
-    "PDRO"
+    "## Frequensit\n"
    ]
   },
   {
@@ -180,9 +177,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
