--- a/docs-code/api/notebooks/mixed_dro_tutorial.ipynb
+++ b/docs-code/api/notebooks/mixed_dro_tutorial.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this part, we discuss Holistic DRO, Outlier-Robust Wasserstein DRO, Sinkhorn DRO，MOT DRO, and MMD DRO."
+    "In this part, we provide some examples for DRO models with mixed distances, where we exemplify with Sinkhorn DRO and MOT DRO."
    ]
   },
   {
