--- a/test.ipynb
+++ b/test.ipynb
@@ -1,129 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# DRO with Mixed Distances"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this part, we provide some examples for DRO models with mixed distances, where we exemplify with Sinkhorn DRO, MOT DRO and Outlier-Robust WDRO."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sinkhorn DRO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sinkhorn DRO Parameters: {'theta': array([33.60147 , 32.046486, 29.364248, 75.13656 ,  7.143059, 10.22598 ,\n",
-      "       76.198784,  9.39397 ,  5.147702, 58.21924 ], dtype=float32), 'bias': array([-0.07683522], dtype=float32)}\n",
-      "0.9808581183352392\n",
-      "Sklearn Coefficients: [33.63648075 32.05820144 29.38822328 75.17312611  7.16263766 10.24411887\n",
-      " 76.22903811  9.4250155   5.12332423 58.27112617]\n",
-      "0.9999457911466745\n"
-     ]
-    }
-   ],
-   "source": [
-    "from dro.src.linear_model.sinkhorn_dro import *\n",
-    "from sklearn.datasets import make_regression\n",
-    "from sklearn.linear_model import Ridge\n",
-    "\n",
-    "# Data generation\n",
-    "X, y = make_regression(n_samples=1000, n_features=10, noise=1, random_state=42)\n",
-    "\n",
-    "# Model training\n",
-    "dro_model = SinkhornLinearDRO(input_dim=10, output_dim=1, k_sample_max=4, reg_param=.001, lambda_param=100, max_iter=1000, model_type='lad')\n",
-    "params = dro_model.fit(X, y, optimization_type=\"SG\")\n",
-    "print(\"Sinkhorn DRO Parameters:\", params)\n",
-    "print(dro_model.score(X, y))\n",
-    "\n",
-    "# Baseline comparison\n",
-    "lr_model = Ridge()\n",
-    "lr_model.fit(X, y)\n",
-    "print(\"Sklearn Coefficients:\", lr_model.coef_)\n",
-    "print(lr_model.score(X,y))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## MOT-DRO\n",
-    "\n",
-    "Based on Theorem 5.2, the current MOT-DRO does not support OLS (not satisfying Assumption 5.1) and does not allow when the uncertainties in Y also change."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "optimal\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'theta': [76.21548985345878,\n",
-       "  53.29365202998623,\n",
-       "  5.247024494762593,\n",
-       "  52.46410461035137,\n",
-       "  71.74006738420996,\n",
-       "  1.214010364770905,\n",
-       "  63.72428598909404,\n",
-       "  14.06587595353978,\n",
-       "  2.997652104182758,\n",
-       "  44.93666589113934],\n",
-       " 'b': array(1.29102914)}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.datasets import make_regression\n",
-    "\n",
-    "# Data generation\n",
-    "X, y = make_regression(n_samples=100, n_features=10, random_state=42)\n",
-    "\n",
-    "from dro.src.linear_model.mot_dro import *\n",
-    "mot_dro_model = MOTDRO(input_dim = 10, model_type = 'lad', fit_intercept = True)\n",
-    "mot_dro_model.update({'eps': 1, 'square':2})\n",
-    "mot_dro_model.fit(X, y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## OR-WDRO + HR-DRO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -142,19 +21,114 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2026-01-26\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'ORWDRO' object has no attribute 'fit_old'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/72/gsmssx6d0v585bc4x6z7cjqh0000gn/T/ipykernel_17355/221121421.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mORWDRO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_dim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mresult1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mresult2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_old\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'ORWDRO' object has no attribute 'fit_old'"
+      "check z0 [1.24211953 0.68840159]\n",
+      "===============================================================================\n",
+      "                                     CVXPY                                     \n",
+      "                                     v1.6.0                                    \n",
+      "===============================================================================\n",
+      "(CVXPY) May 03 05:18:29 PM: Your problem has 1105 variables, 1000 constraints, and 0 parameters.\n",
+      "(CVXPY) May 03 05:18:29 PM: It is compliant with the following grammars: DCP, DQCP\n",
+      "(CVXPY) May 03 05:18:29 PM: (If you need to solve this problem multiple times, but with different data, consider using parameters.)\n",
+      "(CVXPY) May 03 05:18:29 PM: CVXPY will first compile your problem; then, it will invoke a numerical solver to obtain a solution.\n",
+      "(CVXPY) May 03 05:18:29 PM: Your problem is compiled with the CPP canonicalization backend.\n",
+      "-------------------------------------------------------------------------------\n",
+      "                                  Compilation                                  \n",
+      "-------------------------------------------------------------------------------\n",
+      "(CVXPY) May 03 05:18:29 PM: Compiling problem (target solver=MOSEK).\n",
+      "(CVXPY) May 03 05:18:29 PM: Reduction chain: Dcp2Cone -> CvxAttr2Constr -> ConeMatrixStuffing -> MOSEK\n",
+      "(CVXPY) May 03 05:18:29 PM: Applying reduction Dcp2Cone\n",
+      "(CVXPY) May 03 05:18:29 PM: Applying reduction CvxAttr2Constr\n",
+      "(CVXPY) May 03 05:18:29 PM: Applying reduction ConeMatrixStuffing\n",
+      "(CVXPY) May 03 05:18:29 PM: Applying reduction MOSEK\n",
+      "(CVXPY) May 03 05:18:29 PM: Finished problem compilation (took 2.231e-02 seconds).\n",
+      "-------------------------------------------------------------------------------\n",
+      "                                Numerical solver                               \n",
+      "-------------------------------------------------------------------------------\n",
+      "(CVXPY) May 03 05:18:29 PM: Invoking solver MOSEK  to obtain a solution.\n",
+      "\n",
+      "\n",
+      "(CVXPY) May 03 05:18:29 PM: Problem\n",
+      "(CVXPY) May 03 05:18:29 PM:   Name                   :                 \n",
+      "(CVXPY) May 03 05:18:29 PM:   Objective sense        : maximize        \n",
+      "(CVXPY) May 03 05:18:29 PM:   Type                   : CONIC (conic optimization problem)\n",
+      "(CVXPY) May 03 05:18:29 PM:   Constraints            : 1507            \n",
+      "(CVXPY) May 03 05:18:29 PM:   Affine conic cons.     : 0               \n",
+      "(CVXPY) May 03 05:18:29 PM:   Disjunctive cons.      : 0               \n",
+      "(CVXPY) May 03 05:18:29 PM:   Cones                  : 2               \n",
+      "(CVXPY) May 03 05:18:29 PM:   Scalar variables       : 2506            \n",
+      "(CVXPY) May 03 05:18:29 PM:   Matrix variables       : 0               \n",
+      "(CVXPY) May 03 05:18:29 PM:   Integer variables      : 0               \n",
+      "(CVXPY) May 03 05:18:29 PM: \n",
+      "(CVXPY) May 03 05:18:29 PM: Optimizer started.\n",
+      "(CVXPY) May 03 05:18:29 PM: Presolve started.\n",
+      "(CVXPY) May 03 05:18:29 PM: Linear dependency checker started.\n",
+      "(CVXPY) May 03 05:18:29 PM: Linear dependency checker terminated.\n",
+      "(CVXPY) May 03 05:18:29 PM: Eliminator started.\n",
+      "(CVXPY) May 03 05:18:29 PM: Freed constraints in eliminator : 600\n",
+      "(CVXPY) May 03 05:18:29 PM: Eliminator terminated.\n",
+      "(CVXPY) May 03 05:18:29 PM: Eliminator started.\n",
+      "(CVXPY) May 03 05:18:29 PM: Freed constraints in eliminator : 0\n",
+      "(CVXPY) May 03 05:18:29 PM: Eliminator terminated.\n",
+      "(CVXPY) May 03 05:18:29 PM: Eliminator - tries                  : 2                 time                   : 0.00            \n",
+      "(CVXPY) May 03 05:18:29 PM: Lin. dep.  - tries                  : 1                 time                   : 0.00            \n",
+      "(CVXPY) May 03 05:18:29 PM: Lin. dep.  - number                 : 0               \n",
+      "(CVXPY) May 03 05:18:29 PM: Presolve terminated. Time: 0.00    \n",
+      "(CVXPY) May 03 05:18:29 PM: Problem\n",
+      "(CVXPY) May 03 05:18:29 PM:   Name                   :                 \n",
+      "(CVXPY) May 03 05:18:29 PM:   Objective sense        : maximize        \n",
+      "(CVXPY) May 03 05:18:29 PM:   Type                   : CONIC (conic optimization problem)\n",
+      "(CVXPY) May 03 05:18:29 PM:   Constraints            : 1507            \n",
+      "(CVXPY) May 03 05:18:29 PM:   Affine conic cons.     : 0               \n",
+      "(CVXPY) May 03 05:18:29 PM:   Disjunctive cons.      : 0               \n",
+      "(CVXPY) May 03 05:18:29 PM:   Cones                  : 2               \n",
+      "(CVXPY) May 03 05:18:29 PM:   Scalar variables       : 2506            \n",
+      "(CVXPY) May 03 05:18:29 PM:   Matrix variables       : 0               \n",
+      "(CVXPY) May 03 05:18:29 PM:   Integer variables      : 0               \n",
+      "(CVXPY) May 03 05:18:29 PM: \n",
+      "(CVXPY) May 03 05:18:29 PM: Optimizer  - threads                : 8               \n",
+      "(CVXPY) May 03 05:18:29 PM: Optimizer  - solved problem         : the primal      \n",
+      "(CVXPY) May 03 05:18:29 PM: Optimizer  - Constraints            : 506\n",
+      "(CVXPY) May 03 05:18:29 PM: Optimizer  - Cones                  : 2\n",
+      "(CVXPY) May 03 05:18:29 PM: Optimizer  - Scalar variables       : 905               conic                  : 404             \n",
+      "(CVXPY) May 03 05:18:29 PM: Optimizer  - Semi-definite variables: 0                 scalarized             : 0               \n",
+      "(CVXPY) May 03 05:18:29 PM: Factor     - setup time             : 0.00              dense det. time        : 0.00            \n",
+      "(CVXPY) May 03 05:18:29 PM: Factor     - ML order time          : 0.00              GP order time          : 0.00            \n",
+      "(CVXPY) May 03 05:18:29 PM: Factor     - nonzeros before factor : 3627              after factor           : 3849            \n",
+      "(CVXPY) May 03 05:18:29 PM: Factor     - dense dim.             : 4                 flops                  : 3.89e+04        \n",
+      "(CVXPY) May 03 05:18:29 PM: ITE PFEAS    DFEAS    GFEAS    PRSTATUS   POBJ              DOBJ              MU       TIME  \n",
+      "(CVXPY) May 03 05:18:29 PM: 0   1.0e+00  2.2e+02  1.0e+00  0.00e+00   0.000000000e+00   0.000000000e+00   1.0e+00  0.01  \n",
+      "(CVXPY) May 03 05:18:29 PM: 1   7.3e-01  1.6e+02  8.1e-01  -7.23e-01  2.611490587e+00   2.342637888e+00   7.3e-01  0.02  \n",
+      "(CVXPY) May 03 05:18:29 PM: 2   3.3e-01  7.3e+01  4.9e-01  -7.83e-01  1.387322815e+01   1.257440071e+01   3.3e-01  0.03  \n",
+      "(CVXPY) May 03 05:18:29 PM: 3   8.5e-02  1.9e+01  1.1e-01  -3.06e-01  3.439731273e+01   3.316574215e+01   8.5e-02  0.03  \n",
+      "(CVXPY) May 03 05:18:29 PM: 4   3.1e-02  6.7e+00  3.2e-02  3.40e-01   2.173854572e+01   2.080745422e+01   3.1e-02  0.03  \n",
+      "(CVXPY) May 03 05:18:29 PM: 5   1.8e-02  3.9e+00  1.3e-02  7.26e-01   1.195115694e+01   1.150567709e+01   1.8e-02  0.03  \n",
+      "(CVXPY) May 03 05:18:29 PM: 6   4.1e-03  8.9e-01  7.5e-04  1.15e+00   4.532914060e+00   4.518113975e+00   4.1e-03  0.03  \n",
+      "(CVXPY) May 03 05:18:29 PM: 7   1.4e-03  3.0e-01  1.2e-04  2.69e+00   1.275336843e+00   1.271038753e+00   1.4e-03  0.03  \n",
+      "(CVXPY) May 03 05:18:29 PM: 8   6.6e-04  1.4e-01  3.7e-05  2.11e+00   5.491044330e-01   5.470738060e-01   6.6e-04  0.03  \n",
+      "(CVXPY) May 03 05:18:29 PM: 9   3.4e-04  7.5e-02  1.3e-05  1.44e+00   3.358049846e-01   3.348414851e-01   3.4e-04  0.04  \n",
+      "(CVXPY) May 03 05:18:29 PM: 10  2.3e-04  5.2e-02  8.0e-06  1.06e+00   2.762797494e-01   2.754810399e-01   2.3e-04  0.04  \n",
+      "(CVXPY) May 03 05:18:29 PM: 11  1.0e-04  2.2e-02  2.3e-06  1.05e+00   2.013777780e-01   2.010267609e-01   1.0e-04  0.04  \n",
+      "(CVXPY) May 03 05:18:29 PM: 12  4.7e-05  1.0e-02  6.8e-07  9.62e-01   1.705184191e-01   1.703803319e-01   4.7e-05  0.04  \n",
+      "(CVXPY) May 03 05:18:29 PM: 13  1.6e-05  3.6e-03  1.4e-07  9.96e-01   1.527914058e-01   1.527470696e-01   1.6e-05  0.04  \n",
+      "(CVXPY) May 03 05:18:29 PM: 14  3.8e-06  8.2e-04  1.3e-08  9.48e-01   1.440319560e-01   1.440253734e-01   3.8e-06  0.04  \n",
+      "(CVXPY) May 03 05:18:29 PM: 15  2.2e-07  4.8e-05  1.9e-10  1.00e+00   1.416451264e-01   1.416447650e-01   2.2e-07  0.04  \n",
+      "(CVXPY) May 03 05:18:29 PM: 16  6.5e-09  1.4e-06  9.5e-13  1.00e+00   1.414996542e-01   1.414996437e-01   6.5e-09  0.05  \n",
+      "(CVXPY) May 03 05:18:29 PM: Optimizer terminated. Time: 0.05    \n",
+      "(CVXPY) May 03 05:18:29 PM: \n",
+      "(CVXPY) May 03 05:18:29 PM: \n",
+      "(CVXPY) May 03 05:18:29 PM: Interior-point solution summary\n",
+      "(CVXPY) May 03 05:18:29 PM:   Problem status  : PRIMAL_AND_DUAL_FEASIBLE\n",
+      "(CVXPY) May 03 05:18:29 PM:   Solution status : OPTIMAL\n",
+      "(CVXPY) May 03 05:18:29 PM:   Primal.  obj: 1.4149965418e-01    nrm: 2e+00    Viol.  con: 1e-08    var: 2e-06    cones: 0e+00  \n",
+      "(CVXPY) May 03 05:18:29 PM:   Dual.    obj: 1.4149964367e-01    nrm: 9e+00    Viol.  con: 0e+00    var: 1e-06    cones: 0e+00  \n",
+      "-------------------------------------------------------------------------------\n",
+      "                                    Summary                                    \n",
+      "-------------------------------------------------------------------------------\n",
+      "(CVXPY) May 03 05:18:29 PM: Problem status: optimal\n",
+      "(CVXPY) May 03 05:18:29 PM: Optimal value: 1.415e-01\n",
+      "(CVXPY) May 03 05:18:29 PM: Compilation took 2.231e-02 seconds\n",
+      "(CVXPY) May 03 05:18:29 PM: Solver (including time spent in interface) took 6.019e-02 seconds\n",
+      "{'theta': [-1.1826445322590236, 2.368374832775334], 'b': array(0.29778498)}\n"
      ]
     }
    ],
@@ -182,7 +156,8 @@
     "from dro.src.linear_model.hr_dro import HR_DRO_LR\n",
     "\n",
     "model = HR_DRO_LR(input_dim = dim, model_type = 'svm', epsilon = 0, epsilon_prime = 0, r = 0, alpha = 0.001)\n",
-    "model.fit(X, y)\n"
+    "model.fit(X, y)\n",
+    "\n"
    ]
   }
  ],
@@ -204,6 +179,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
