--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -18,117 +18,25 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.9/site-packages/cvxpy/expressions/expression.py:667: UserWarning: \n",
+      "This use of ``*`` has resulted in matrix multiplication.\n",
+      "Using ``*`` for matrix multiplication has been deprecated since CVXPY 1.1.\n",
+      "    Use ``*`` for matrix-scalar and vector-scalar multiplication.\n",
+      "    Use ``@`` for matrix-matrix and matrix-vector multiplication.\n",
+      "    Use ``multiply`` for elementwise multiplication.\n",
+      "This code path has been hit 8 times so far.\n",
+      "\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "check z0 [1.24211953 0.68840159]\n",
-      "===============================================================================\n",
-      "                                     CVXPY                                     \n",
-      "                                     v1.6.0                                    \n",
-      "===============================================================================\n",
-      "(CVXPY) May 03 05:18:29 PM: Your problem has 1105 variables, 1000 constraints, and 0 parameters.\n",
-      "(CVXPY) May 03 05:18:29 PM: It is compliant with the following grammars: DCP, DQCP\n",
-      "(CVXPY) May 03 05:18:29 PM: (If you need to solve this problem multiple times, but with different data, consider using parameters.)\n",
-      "(CVXPY) May 03 05:18:29 PM: CVXPY will first compile your problem; then, it will invoke a numerical solver to obtain a solution.\n",
-      "(CVXPY) May 03 05:18:29 PM: Your problem is compiled with the CPP canonicalization backend.\n",
-      "-------------------------------------------------------------------------------\n",
-      "                                  Compilation                                  \n",
-      "-------------------------------------------------------------------------------\n",
-      "(CVXPY) May 03 05:18:29 PM: Compiling problem (target solver=MOSEK).\n",
-      "(CVXPY) May 03 05:18:29 PM: Reduction chain: Dcp2Cone -> CvxAttr2Constr -> ConeMatrixStuffing -> MOSEK\n",
-      "(CVXPY) May 03 05:18:29 PM: Applying reduction Dcp2Cone\n",
-      "(CVXPY) May 03 05:18:29 PM: Applying reduction CvxAttr2Constr\n",
-      "(CVXPY) May 03 05:18:29 PM: Applying reduction ConeMatrixStuffing\n",
-      "(CVXPY) May 03 05:18:29 PM: Applying reduction MOSEK\n",
-      "(CVXPY) May 03 05:18:29 PM: Finished problem compilation (took 2.231e-02 seconds).\n",
-      "-------------------------------------------------------------------------------\n",
-      "                                Numerical solver                               \n",
-      "-------------------------------------------------------------------------------\n",
-      "(CVXPY) May 03 05:18:29 PM: Invoking solver MOSEK  to obtain a solution.\n",
-      "\n",
-      "\n",
-      "(CVXPY) May 03 05:18:29 PM: Problem\n",
-      "(CVXPY) May 03 05:18:29 PM:   Name                   :                 \n",
-      "(CVXPY) May 03 05:18:29 PM:   Objective sense        : maximize        \n",
-      "(CVXPY) May 03 05:18:29 PM:   Type                   : CONIC (conic optimization problem)\n",
-      "(CVXPY) May 03 05:18:29 PM:   Constraints            : 1507            \n",
-      "(CVXPY) May 03 05:18:29 PM:   Affine conic cons.     : 0               \n",
-      "(CVXPY) May 03 05:18:29 PM:   Disjunctive cons.      : 0               \n",
-      "(CVXPY) May 03 05:18:29 PM:   Cones                  : 2               \n",
-      "(CVXPY) May 03 05:18:29 PM:   Scalar variables       : 2506            \n",
-      "(CVXPY) May 03 05:18:29 PM:   Matrix variables       : 0               \n",
-      "(CVXPY) May 03 05:18:29 PM:   Integer variables      : 0               \n",
-      "(CVXPY) May 03 05:18:29 PM: \n",
-      "(CVXPY) May 03 05:18:29 PM: Optimizer started.\n",
-      "(CVXPY) May 03 05:18:29 PM: Presolve started.\n",
-      "(CVXPY) May 03 05:18:29 PM: Linear dependency checker started.\n",
-      "(CVXPY) May 03 05:18:29 PM: Linear dependency checker terminated.\n",
-      "(CVXPY) May 03 05:18:29 PM: Eliminator started.\n",
-      "(CVXPY) May 03 05:18:29 PM: Freed constraints in eliminator : 600\n",
-      "(CVXPY) May 03 05:18:29 PM: Eliminator terminated.\n",
-      "(CVXPY) May 03 05:18:29 PM: Eliminator started.\n",
-      "(CVXPY) May 03 05:18:29 PM: Freed constraints in eliminator : 0\n",
-      "(CVXPY) May 03 05:18:29 PM: Eliminator terminated.\n",
-      "(CVXPY) May 03 05:18:29 PM: Eliminator - tries                  : 2                 time                   : 0.00            \n",
-      "(CVXPY) May 03 05:18:29 PM: Lin. dep.  - tries                  : 1                 time                   : 0.00            \n",
-      "(CVXPY) May 03 05:18:29 PM: Lin. dep.  - number                 : 0               \n",
-      "(CVXPY) May 03 05:18:29 PM: Presolve terminated. Time: 0.00    \n",
-      "(CVXPY) May 03 05:18:29 PM: Problem\n",
-      "(CVXPY) May 03 05:18:29 PM:   Name                   :                 \n",
-      "(CVXPY) May 03 05:18:29 PM:   Objective sense        : maximize        \n",
-      "(CVXPY) May 03 05:18:29 PM:   Type                   : CONIC (conic optimization problem)\n",
-      "(CVXPY) May 03 05:18:29 PM:   Constraints            : 1507            \n",
-      "(CVXPY) May 03 05:18:29 PM:   Affine conic cons.     : 0               \n",
-      "(CVXPY) May 03 05:18:29 PM:   Disjunctive cons.      : 0               \n",
-      "(CVXPY) May 03 05:18:29 PM:   Cones                  : 2               \n",
-      "(CVXPY) May 03 05:18:29 PM:   Scalar variables       : 2506            \n",
-      "(CVXPY) May 03 05:18:29 PM:   Matrix variables       : 0               \n",
-      "(CVXPY) May 03 05:18:29 PM:   Integer variables      : 0               \n",
-      "(CVXPY) May 03 05:18:29 PM: \n",
-      "(CVXPY) May 03 05:18:29 PM: Optimizer  - threads                : 8               \n",
-      "(CVXPY) May 03 05:18:29 PM: Optimizer  - solved problem         : the primal      \n",
-      "(CVXPY) May 03 05:18:29 PM: Optimizer  - Constraints            : 506\n",
-      "(CVXPY) May 03 05:18:29 PM: Optimizer  - Cones                  : 2\n",
-      "(CVXPY) May 03 05:18:29 PM: Optimizer  - Scalar variables       : 905               conic                  : 404             \n",
-      "(CVXPY) May 03 05:18:29 PM: Optimizer  - Semi-definite variables: 0                 scalarized             : 0               \n",
-      "(CVXPY) May 03 05:18:29 PM: Factor     - setup time             : 0.00              dense det. time        : 0.00            \n",
-      "(CVXPY) May 03 05:18:29 PM: Factor     - ML order time          : 0.00              GP order time          : 0.00            \n",
-      "(CVXPY) May 03 05:18:29 PM: Factor     - nonzeros before factor : 3627              after factor           : 3849            \n",
-      "(CVXPY) May 03 05:18:29 PM: Factor     - dense dim.             : 4                 flops                  : 3.89e+04        \n",
-      "(CVXPY) May 03 05:18:29 PM: ITE PFEAS    DFEAS    GFEAS    PRSTATUS   POBJ              DOBJ              MU       TIME  \n",
-      "(CVXPY) May 03 05:18:29 PM: 0   1.0e+00  2.2e+02  1.0e+00  0.00e+00   0.000000000e+00   0.000000000e+00   1.0e+00  0.01  \n",
-      "(CVXPY) May 03 05:18:29 PM: 1   7.3e-01  1.6e+02  8.1e-01  -7.23e-01  2.611490587e+00   2.342637888e+00   7.3e-01  0.02  \n",
-      "(CVXPY) May 03 05:18:29 PM: 2   3.3e-01  7.3e+01  4.9e-01  -7.83e-01  1.387322815e+01   1.257440071e+01   3.3e-01  0.03  \n",
-      "(CVXPY) May 03 05:18:29 PM: 3   8.5e-02  1.9e+01  1.1e-01  -3.06e-01  3.439731273e+01   3.316574215e+01   8.5e-02  0.03  \n",
-      "(CVXPY) May 03 05:18:29 PM: 4   3.1e-02  6.7e+00  3.2e-02  3.40e-01   2.173854572e+01   2.080745422e+01   3.1e-02  0.03  \n",
-      "(CVXPY) May 03 05:18:29 PM: 5   1.8e-02  3.9e+00  1.3e-02  7.26e-01   1.195115694e+01   1.150567709e+01   1.8e-02  0.03  \n",
-      "(CVXPY) May 03 05:18:29 PM: 6   4.1e-03  8.9e-01  7.5e-04  1.15e+00   4.532914060e+00   4.518113975e+00   4.1e-03  0.03  \n",
-      "(CVXPY) May 03 05:18:29 PM: 7   1.4e-03  3.0e-01  1.2e-04  2.69e+00   1.275336843e+00   1.271038753e+00   1.4e-03  0.03  \n",
-      "(CVXPY) May 03 05:18:29 PM: 8   6.6e-04  1.4e-01  3.7e-05  2.11e+00   5.491044330e-01   5.470738060e-01   6.6e-04  0.03  \n",
-      "(CVXPY) May 03 05:18:29 PM: 9   3.4e-04  7.5e-02  1.3e-05  1.44e+00   3.358049846e-01   3.348414851e-01   3.4e-04  0.04  \n",
-      "(CVXPY) May 03 05:18:29 PM: 10  2.3e-04  5.2e-02  8.0e-06  1.06e+00   2.762797494e-01   2.754810399e-01   2.3e-04  0.04  \n",
-      "(CVXPY) May 03 05:18:29 PM: 11  1.0e-04  2.2e-02  2.3e-06  1.05e+00   2.013777780e-01   2.010267609e-01   1.0e-04  0.04  \n",
-      "(CVXPY) May 03 05:18:29 PM: 12  4.7e-05  1.0e-02  6.8e-07  9.62e-01   1.705184191e-01   1.703803319e-01   4.7e-05  0.04  \n",
-      "(CVXPY) May 03 05:18:29 PM: 13  1.6e-05  3.6e-03  1.4e-07  9.96e-01   1.527914058e-01   1.527470696e-01   1.6e-05  0.04  \n",
-      "(CVXPY) May 03 05:18:29 PM: 14  3.8e-06  8.2e-04  1.3e-08  9.48e-01   1.440319560e-01   1.440253734e-01   3.8e-06  0.04  \n",
-      "(CVXPY) May 03 05:18:29 PM: 15  2.2e-07  4.8e-05  1.9e-10  1.00e+00   1.416451264e-01   1.416447650e-01   2.2e-07  0.04  \n",
-      "(CVXPY) May 03 05:18:29 PM: 16  6.5e-09  1.4e-06  9.5e-13  1.00e+00   1.414996542e-01   1.414996437e-01   6.5e-09  0.05  \n",
-      "(CVXPY) May 03 05:18:29 PM: Optimizer terminated. Time: 0.05    \n",
-      "(CVXPY) May 03 05:18:29 PM: \n",
-      "(CVXPY) May 03 05:18:29 PM: \n",
-      "(CVXPY) May 03 05:18:29 PM: Interior-point solution summary\n",
-      "(CVXPY) May 03 05:18:29 PM:   Problem status  : PRIMAL_AND_DUAL_FEASIBLE\n",
-      "(CVXPY) May 03 05:18:29 PM:   Solution status : OPTIMAL\n",
-      "(CVXPY) May 03 05:18:29 PM:   Primal.  obj: 1.4149965418e-01    nrm: 2e+00    Viol.  con: 1e-08    var: 2e-06    cones: 0e+00  \n",
-      "(CVXPY) May 03 05:18:29 PM:   Dual.    obj: 1.4149964367e-01    nrm: 9e+00    Viol.  con: 0e+00    var: 1e-06    cones: 0e+00  \n",
-      "-------------------------------------------------------------------------------\n",
-      "                                    Summary                                    \n",
-      "-------------------------------------------------------------------------------\n",
-      "(CVXPY) May 03 05:18:29 PM: Problem status: optimal\n",
-      "(CVXPY) May 03 05:18:29 PM: Optimal value: 1.415e-01\n",
-      "(CVXPY) May 03 05:18:29 PM: Compilation took 2.231e-02 seconds\n",
-      "(CVXPY) May 03 05:18:29 PM: Solver (including time spent in interface) took 6.019e-02 seconds\n",
-      "{'theta': [-1.1826445322590236, 2.368374832775334], 'b': array(0.29778498)}\n"
+      "[-0.8191789681177732, 2.054376503386347] [-1.1801395691635055, 2.363210268976911]\n"
      ]
     }
    ],
@@ -143,21 +51,118 @@
     "from dro.src.linear_model.or_wasserstein_dro import *\n",
     "from dro.src.linear_model.chi2_dro import *\n",
     "\n",
-    "dim = 2\n",
+    "from dro.src.linear_model.marginal_dro import *\n",
     "\n",
+    "dim = 2\n",
     "# X = np.array([[-1, -1], [1, 1]])\n",
     "# y = np.array([-1, 1])\n",
     "X, y = classification_basic(d = 2, num_samples = 100, radius = 2, visualize = True)\n",
     "\n",
-    "model = ORWDRO(input_dim = dim, eps = 0, eta = 0.0)\n",
-    "model.fit(X, y)\n",
-    "# result2 = model.fit_old(X, y)\n",
+    "model = MarginalCVaRDRO(input_dim = dim, model_type = 'svm', alpha = 0.2, L = 0.5)\n",
+    "result1 = model.fit(X, y)\n",
+    "result2 = model.fit_old(X, y)\n",
     "\n",
-    "from dro.src.linear_model.hr_dro import HR_DRO_LR\n",
+    "print(result1['theta'], result2['theta'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'theta': [2.982568762658997e-06,\n",
+       "  -1.960251991750727e-07,\n",
+       "  -2.4624271346752922e-06,\n",
+       "  1.2360472774259644e-06,\n",
+       "  2.066391525777745e-06,\n",
+       "  -2.4865358356274887e-06,\n",
+       "  2.176710087984915e-06,\n",
+       "  0.0,\n",
+       "  2.9350978661635084e-06,\n",
+       "  4.339538540151883e-06,\n",
+       "  -3.171517531917443e-06,\n",
+       "  2.5921706668544333e-10,\n",
+       "  -2.6437058037606586e-06,\n",
+       "  -1.0000053799823558,\n",
+       "  -1.0000078856840149,\n",
+       "  -1.0000049264872082,\n",
+       "  -1.0000097047038652,\n",
+       "  -1.0000069249845451,\n",
+       "  0.0,\n",
+       "  -2.1602871456204587e-05,\n",
+       "  0.12718628558675926,\n",
+       "  0.0,\n",
+       "  -4.658811797530515e-06,\n",
+       "  -3.058878649244834e-06,\n",
+       "  0.668613775481772,\n",
+       "  -1.6983275416524654e-06,\n",
+       "  -6.136056793400413e-06,\n",
+       "  2.596976250409225e-07,\n",
+       "  -5.070450861738095e-06,\n",
+       "  3.301683666080837e-06,\n",
+       "  -7.248193422383928e-06,\n",
+       "  0.0,\n",
+       "  -6.678534381062916e-06,\n",
+       "  -4.34199762086103e-06,\n",
+       "  7.771948385555112e-06,\n",
+       "  1.0677361634414439e-06,\n",
+       "  1.467487951451173e-05,\n",
+       "  1.0755918013221602e-05,\n",
+       "  8.894222595258889e-06,\n",
+       "  -1.0484854422687736e-05,\n",
+       "  0.0,\n",
+       "  8.86819312604553e-06,\n",
+       "  0.0,\n",
+       "  -1.1028268789337711e-05],\n",
+       " 'b': array(0.)}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dro.src.linear_model.chi2_dro import Chi2DRO\n",
+    "import numpy as np\n",
     "\n",
-    "model = HR_DRO_LR(input_dim = dim, model_type = 'svm', epsilon = 0, epsilon_prime = 0, r = 0, alpha = 0.001)\n",
-    "model.fit(X, y)\n",
-    "\n"
+    "data = np.load('data.npz')\n",
+    "\n",
+    "X, y = data['X'], 2 * (data['y']) - 1\n",
+    "\n",
+    "model = Chi2DRO(input_dim=len(X[0]))\n",
+    "model.update({'eps': 0.5})\n",
+    "model.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wty6162/Desktop/DRO_solver/dro/dro/src/tree_model/xgb.py:233: RuntimeWarning: overflow encountered in exp\n",
+      "  preds = 1.0 / (1.0 + np.exp(-preds))  # Sigmoid transform\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dro.src.tree_model.xgb import Chi2DRO_XGB\n",
+    "import numpy as np\n",
+    "\n",
+    "data = np.load('data.npz')\n",
+    "\n",
+    "X, y = data['X'], 2 * (data['y']) - 1\n",
+    "\n",
+    "model = Chi2DRO_XGB(eps = 0.1)\n",
+    "model.update({'eps':0.1, 'num_boost_round': 10})\n",
+    "model.fit(X, y)"
    ]
   }
  ],
