--- a/test.ipynb
+++ b/test.ipynb
@@ -67,75 +67,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'theta': [2.982568762658997e-06,\n",
-       "  -1.960251991750727e-07,\n",
-       "  -2.4624271346752922e-06,\n",
-       "  1.2360472774259644e-06,\n",
-       "  2.066391525777745e-06,\n",
-       "  -2.4865358356274887e-06,\n",
-       "  2.176710087984915e-06,\n",
-       "  0.0,\n",
-       "  2.9350978661635084e-06,\n",
-       "  4.339538540151883e-06,\n",
-       "  -3.171517531917443e-06,\n",
-       "  2.5921706668544333e-10,\n",
-       "  -2.6437058037606586e-06,\n",
-       "  -1.0000053799823558,\n",
-       "  -1.0000078856840149,\n",
-       "  -1.0000049264872082,\n",
-       "  -1.0000097047038652,\n",
-       "  -1.0000069249845451,\n",
-       "  0.0,\n",
-       "  -2.1602871456204587e-05,\n",
-       "  0.12718628558675926,\n",
-       "  0.0,\n",
-       "  -4.658811797530515e-06,\n",
-       "  -3.058878649244834e-06,\n",
-       "  0.668613775481772,\n",
-       "  -1.6983275416524654e-06,\n",
-       "  -6.136056793400413e-06,\n",
-       "  2.596976250409225e-07,\n",
-       "  -5.070450861738095e-06,\n",
-       "  3.301683666080837e-06,\n",
-       "  -7.248193422383928e-06,\n",
-       "  0.0,\n",
-       "  -6.678534381062916e-06,\n",
-       "  -4.34199762086103e-06,\n",
-       "  7.771948385555112e-06,\n",
-       "  1.0677361634414439e-06,\n",
-       "  1.467487951451173e-05,\n",
-       "  1.0755918013221602e-05,\n",
-       "  8.894222595258889e-06,\n",
-       "  -1.0484854422687736e-05,\n",
-       "  0.0,\n",
-       "  8.86819312604553e-06,\n",
-       "  0.0,\n",
-       "  -1.1028268789337711e-05],\n",
-       " 'b': array(0.)}"
+       "2000"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from dro.src.linear_model.chi2_dro import Chi2DRO\n",
+    "from dro.src.linear_model.kl_dro import KLDRO\n",
     "import numpy as np\n",
     "\n",
     "data = np.load('data.npz')\n",
     "\n",
     "X, y = data['X'], 2 * (data['y']) - 1\n",
     "\n",
-    "model = Chi2DRO(input_dim=len(X[0]))\n",
+    "model = KLDRO(input_dim=len(X[0]))\n",
     "model.update({'eps': 0.5})\n",
-    "model.fit(X, y)"
+    "model.update_kernel({'metric': 'poly', 'n_components': 2000})\n",
+    "output = model.fit(X, y)\n",
+    "len(output['theta'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1,  1,  1, ..., -1, -1, -1])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'rbf'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.kernel"
    ]
   },
   {
