--- a/test.ipynb
+++ b/test.ipynb
@@ -67,54 +67,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2000"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dro.src.linear_model.chi2_dro import Chi2DRO\n",
     "from dro.src.linear_model.kl_dro import KLDRO\n",
+    "from dro.src.linear_model.wasserstein_dro import WassersteinDRO, WassersteinDROsatisficing\n",
+    "from dro.src.data.dataloader_regression import regression_basic\n",
+    "from dro.src.data.dataloader_classification import classification_basic\n",
+    "from dro.src.data.draw_utils import draw_classification\n",
+    "\n",
     "import numpy as np\n",
     "\n",
-    "data = np.load('data.npz')\n",
+    "X, y = classification_basic(d = 20, num_samples = 5000, radius = 2, visualize = False)\n",
     "\n",
-    "X, y = data['X'], 2 * (data['y']) - 1\n",
-    "\n",
-    "model = KLDRO(input_dim=len(X[0]))\n",
-    "model.update({'eps': 0.5})\n",
-    "model.update_kernel({'metric': 'poly', 'n_components': 2000})\n",
-    "output = model.fit(X, y)\n",
-    "len(output['theta'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1,  1,  1, ..., -1, -1, -1])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.predict(X)"
+    "model = WassersteinDROsatisficing(input_dim=len(X[0]))\n",
+    "model.update_kernel({'metric': 'poly', 'n_components': 100})\n",
+    "output = model.fit(X, y)"
    ]
   },
   {
@@ -155,9 +125,9 @@
     "from dro.src.tree_model.xgb import Chi2DRO_XGB\n",
     "import numpy as np\n",
     "\n",
-    "data = np.load('data.npz')\n",
+    "X, y = classification_basic(d = 20, num_samples = 5000, radius = 2, visualize = False)\n",
     "\n",
-    "X, y = data['X'], 2 * (data['y']) - 1\n",
+    "\n",
     "\n",
     "model = Chi2DRO_XGB(eps = 0.1)\n",
     "model.update({'eps':0.1, 'num_boost_round': 10})\n",
